--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,7 @@
 					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="192.168.1.160/index.html">go image</a></li>
+					<li>&copy; Untitled.</li><li>Credits: <a href="http://cimssi.github.io/sharehouse//index.html">go image</a></li>
 				</ul>
 			</footer>
 
