도메인 변경

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>share House</h1>
-						<p>The life is only <a href="cimssi.github.io/sharehouse/index2.html">once</a>.</p>
+						<p>The life is only <a href="index2.html">once</a>.</p>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
