--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>share House</h1>
-						<p>The life is only <a href="index2.html">once</a>.</p>
+						<p>The life is only once.</p>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<li><a href="index3.html" class="icon fa-github"><span class="label"></span> : Room</a></li>
+							<li><a href="index2.html" class="icon fa-envelope-o"><span class="label"></span> : Email</a></li>
 						</ul>
 					</header>
 
