이미지 일괄 업데이트

--- a/elements3.html
+++ b/elements3.html
@@ -23,7 +23,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index3.html" class="logo">
+								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">Phantom</span>
 								</a>
 
@@ -41,7 +41,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index3.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="generic3.html">Ipsum veroeros</a></li>
 							<li><a href="generic3.html">Tempus etiam</a></li>
 							<li><a href="generic3.html">Consequat dolor</a></li>
