--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">share House (itaewon)</span>
+									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">Jung do, shareHouse</span>
 								</a>
 
 							<!-- Nav -->
@@ -36,11 +36,11 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic3.html">itaewon House</a></li>
-							<li><a href="generic3.html">itaewon House</a></li>
-							<li><a href="generic3.html">itaewon House</a></li>
-							<li><a href="elements3.html">itaewon House</a></li>
+							<li><a href="index.html">shareHouse</a></li>
+							<li><a href="generic1.html">Itaewon</a></li>
+							<li><a href="generic1.html">knu.ac.kr</a></li>
+							<li><a href="generic3.html">yu.ac.kr</a></li>
+							<!-- <li><a href="elements3.html">itaewon House</a></li> -->
 						</ul>
 					</nav>
 
@@ -48,17 +48,20 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
+								<!-- <h1>This is Phantom, a free, fully responsive site<br />
 								template designed by <a href="index.html">share House</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
+								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
+								<h1>The share house to change your life.<br> Welcome to JeongDu <a href="index.html">share house</a>.</h1>
+								<p>Living exists to provide a new experience for those looking for a fun and funny.<br>In addition to public space and the private space that reflects the various concepts to spend time alone, you can experience the 'joy together.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images3/pic01.jpg" alt="" />
+										<img src="images3/pic01.jpg" alt="" height="300px" weight="300px"/>
 									</span>
-									<a href="generic3.html">
-										<h2>Magna</h2>
+									<a href="generic1.html">
+										<h2>이태원</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -66,10 +69,10 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images3/pic02.jpg" alt="" />
+										<img src="images3/pic02.jpg" alt="" height="300px" weight="300px"/>
 									</span>
-									<a href="generic3.html">
-										<h2>Lorem</h2>
+									<a href="generic2.html">
+										<h2>경북대</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -77,10 +80,10 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images3/pic03.jpg" alt="" />
+										<img src="images3/pic03.jpg" alt="" height="300px" weight="300px"/>
 									</span>
 									<a href="generic3.html">
-										<h2>Feugiat</h2>
+										<h2>영남대</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -88,10 +91,10 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images3/pic04.jpg" alt="" />
+										<img src="images3/pic04.jpg" alt="" height="300px" weight="300px"/>
 									</span>
-									<a href="generic3.html">
-										<h2>Tempus</h2>
+									<a href="generic4.html">
+										<h2>-</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -99,10 +102,10 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images3/pic05.jpg" alt="" />
+										<img src="images3/pic05.jpg" alt="" height="300px" weight="300px"/>
 									</span>
-									<a href="generic3.html">
-										<h2>Aliquam</h2>
+									<a href="generic5.html">
+										<h2>-</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -110,16 +113,16 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images3/pic06.jpg" alt="" />
+										<img src="images3/pic06.jpg" alt="" height="300px" weight="300px"/>
 									</span>
-									<a href="generic3.html">
-										<h2>Veroeros</h2>
+									<a href="generic6.html">
+										<h2>-</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<!-- <article class="style2">
 									<span class="image">
 										<img src="images3/pic07.jpg" alt="" />
 									</span>
@@ -184,7 +187,7 @@
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 							</section>
 						</div>
 					</div>
