--- a/generic1.html
+++ b/generic1.html
@@ -24,7 +24,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">Itaewon</span>
 								</a>
 
 							<!-- Nav -->
