--- a/generic3.html
+++ b/generic3.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Phantom by HTML5 UP
+	yu.ac.kr by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -24,7 +24,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">YU.ac.kr</span>
 								</a>
 
 							<!-- Nav -->
