--- a/index.html
+++ b/index.html
@@ -196,20 +196,17 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
+								<h2>CONACT</h2>
 								<form method="post" action="#">
 									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="name" id="name" placeholder="KaKao" value="Kakao : chadichake" readonly/>
 									</div>
 									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
+										<input type="text" name="email" id="email" placeholder="Email" value="Email : bk.xxxxxxxxx@gmail.com" readonly/>
 									</div>
 									<div class="field">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
+										<input type="text" name="email" id="email" placeholder="Tel" value="010-5366-2182" readonly/>
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="special" /></li>
-									</ul>
 								</form>
 							</section>
 							<section>
@@ -226,7 +223,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="index.html">share House</a></li>
+								<li>&copy; Untitled. All rights reserved</li>
 							</ul>
 						</div>
 					</footer>
