--- a/elements3.html
+++ b/elements3.html
@@ -371,20 +371,17 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
+								<h2>CONACT</h2>
 								<form method="post" action="#">
 									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="name" id="name" placeholder="KaKao" value="Kakao : chadichake" readonly/>
 									</div>
 									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
+										<input type="text" name="email" id="email" placeholder="Email" value="Email : bk.xxxxxxxxx@gmail.com" readonly/>
 									</div>
 									<div class="field">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
+										<input type="text" name="email" id="email" placeholder="Tel" value="010-5366-2182" readonly/>
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="special" /></li>
-									</ul>
 								</form>
 							</section>
 							<section>
