--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>share House</title>
+		<title>shareHouse</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets3/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,8 +18,8 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">Jung do, shareHouse</span>
+								<a href="/" class="logo">
+									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">stay here, shareHouse</span>
 								</a>
 
 							<!-- Nav -->
@@ -36,10 +36,10 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">shareHouse</a></li>
-							<li><a href="generic1.html">Itaewon</a></li>
-							<li><a href="generic1.html">knu.ac.kr</a></li>
-							<li><a href="generic3.html">yu.ac.kr</a></li>
+							<li><a href="/">shareHouse</a></li>
+							<li><a href="itaewon.html">Itaewon</a></li>
+							<li><a href="yu.html">yu.ac.kr</a></li>
+							<li><a href="knu.html">knu.ac.kr</a></li>
 							<!-- <li><a href="elements3.html">itaewon House</a></li> -->
 						</ul>
 					</nav>
@@ -49,10 +49,10 @@
 						<div class="inner">
 							<header>
 								<!-- <h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="index.html">share House</a>.</h1>
+								template designed by <a href="/">share House</a>.</h1>
 								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
 								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
-								<h1>The share house to change your life.<br> Welcome to JeongDu <a href="index.html">share house</a>.</h1>
+								<h1>The share house to change your life,<br> Welcome to 'STAY HERE' <a href="/">share house</a>.</h1>
 								<p>Living exists to provide a new experience for those looking for a fun and funny.<br>In addition to public space and the private space that reflects the various concepts to spend time alone, you can experience the 'joy together.</p>
 							</header>
 							<section class="tiles">
@@ -60,10 +60,21 @@
 									<span class="image">
 										<img src="images3/pic01.jpg" alt="" height="300px" weight="300px"/>
 									</span>
-									<a href="generic1.html">
+									<a href="itaewon.html">
 										<h2>이태원</h2>
 										<div class="content">
 											<p>It is your best choice.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style3">
+									<span class="image">
+										<img src="images3/yu_full.jpg" alt="" height="300px" weight="300px"/>
+									</span>
+									<a href="yu.html">
+										<h2>영남대</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -71,19 +82,8 @@
 									<span class="image">
 										<img src="images3/pic02.jpg" alt="" height="300px" weight="300px"/>
 									</span>
-									<a href="generic2.html">
+									<a href="knu.html">
 										<h2>경북대</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images3/pic03.jpg" alt="" height="300px" weight="300px"/>
-									</span>
-									<a href="generic3.html">
-										<h2>영남대</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -126,7 +126,7 @@
 									<span class="image">
 										<img src="images3/pic07.jpg" alt="" />
 									</span>
-									<a href="generic3.html">
+									<a href="yu.html">
 										<h2>Ipsum</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -137,7 +137,7 @@
 									<span class="image">
 										<img src="images3/pic08.jpg" alt="" />
 									</span>
-									<a href="generic3.html">
+									<a href="yu.html">
 										<h2>Dolor</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -148,7 +148,7 @@
 									<span class="image">
 										<img src="images3/pic09.jpg" alt="" />
 									</span>
-									<a href="generic3.html">
+									<a href="yu.html">
 										<h2>Nullam</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -159,7 +159,7 @@
 									<span class="image">
 										<img src="images3/pic10.jpg" alt="" />
 									</span>
-									<a href="generic3.html">
+									<a href="yu.html">
 										<h2>Ultricies</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -170,7 +170,7 @@
 									<span class="image">
 										<img src="images3/pic11.jpg" alt="" />
 									</span>
-									<a href="generic3.html">
+									<a href="yu.html">
 										<h2>Dictum</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -181,7 +181,7 @@
 									<span class="image">
 										<img src="images3/pic12.jpg" alt="" />
 									</span>
-									<a href="generic3.html">
+									<a href="yu.html">
 										<h2>Pretium</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -223,7 +223,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li>
+								<li>&copy; stay here. All rights reserved</li>
 							</ul>
 						</div>
 					</footer>
