--- a/generic6.html
+++ b/generic6.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>shareHouse - jungdo Kim</title>
+		<title>shareHouse</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets3/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,7 +23,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<a href="/" class="logo">
 									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">Phantom</span>
 								</a>
 
@@ -41,10 +41,10 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-						<li><a href="index.html">shareHouse</a></li>
-							<li><a href="generic1.html">Itaewon</a></li>
-							<li><a href="generic2.html">knu.ac.kr</a></li>
-							<li><a href="generic3.html">yu.ac.kr</a></li>
+						<li><a href="/">shareHouse</a></li>
+							<li><a href="itaewon.html">Itaewon</a></li>
+							<li><a href="yu.html">yu.ac.kr</a></li>
+							<li><a href="knu.html">knu.ac.kr</a></li>
 							<!-- <li><a href="elements3.html">Elements</a></li> -->
 						</ul>
 					</nav>
@@ -64,20 +64,17 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
+								<h2>CONACT</h2>
 								<form method="post" action="#">
 									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="name" id="name" placeholder="KaKao" value="Kakao : chadichake" readonly/>
 									</div>
 									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
+										<input type="text" name="email" id="email" placeholder="Email" value="Email : bk.xxxxxxxxx@gmail.com" readonly/>
 									</div>
 									<div class="field">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
+										<input type="text" name="email" id="email" placeholder="Tel" value="010-5366-2182" readonly/>
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="special" /></li>
-									</ul>
 								</form>
 							</section>
 							<section>
@@ -94,7 +91,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; stay here. All rights reserved</li>
 							</ul>
 						</div>
 					</footer>
