--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="/" class="logo">
+								<a href="/sharehouse" class="logo">
 									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">stay here, shareHouse</span>
 								</a>
 
@@ -36,7 +36,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="/">shareHouse</a></li>
+							<li><a href="/sharehouse">shareHouse</a></li>
 							<li><a href="itaewon.html">Itaewon</a></li>
 							<li><a href="yu.html">yu.ac.kr</a></li>
 							<li><a href="knu.html">knu.ac.kr</a></li>
@@ -49,10 +49,10 @@
 						<div class="inner">
 							<header>
 								<!-- <h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="/">share House</a>.</h1>
+								template designed by <a href="/sharehouse">share House</a>.</h1>
 								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
 								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
-								<h1>The share house to change your life,<br> Welcome to 'STAY HERE' <a href="/">share house</a>.</h1>
+								<h1>The share house to change your life,<br> Welcome to 'STAY HERE' <a href="/sharehouse">share house</a>.</h1>
 								<p>Living exists to provide a new experience for those looking for a fun and funny.<br>In addition to public space and the private space that reflects the various concepts to spend time alone, you can experience the 'joy together.</p>
 							</header>
 							<section class="tiles">
