--- a/knu.html
+++ b/knu.html
@@ -23,7 +23,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="/" class="logo">
+								<a href="/sharehouse" class="logo">
 									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">KNU.ac.kr</span>
 								</a>
 
@@ -41,7 +41,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-						<li><a href="/">shareHouse</a></li>
+						<li><a href="/sharehouse">shareHouse</a></li>
 							<li><a href="itaewon.html">Itaewon</a></li>
 							<li><a href="yu.html">yu.ac.kr</a></li>
 							<li><a href="knu.html">knu.ac.kr</a></li>
