--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 							<!-- Logo -->
 								<a href="/sharehouse" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">stay here, shareHouse</span>
+									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">stay here _</span>
 								</a>
 
 							<!-- Nav -->
@@ -48,13 +48,19 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<!-- <h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="/sharehouse">share House</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
-								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
-								<h1>The share house to change your life,<br> Welcome to 'STAY HERE' <a href="/sharehouse">share house</a>.</h1>
+							<h1>Sharing value with various people,<br>Growing space 'STAY HERE' is Share House.</h1>
+							<p>From the moment you open the door of STAY HERE HOUSE, you can experience a special culture and value.
+								There is a private space where you can spend your time alone, as well as a public space where everyone can hang out.
+								Through systematic house management and various life and community services,
+								You can enjoy convenience and value of life at the same time!
+							</p>
+							<p>
+								'STAY HERE' HOUSE의 문을 열고 들어온 순간부터, 특별한 문화와 가치를 경험할 수 있습니다. 그리고 혼자만의 시간을 보낼 수 있는 개인공간은 물론, 모두가 어울릴 수 있는 공용공간이 마련돼 있습니다.
+								체계적인 하우스 관리와 다양한 생활 서비스 및 커뮤니티 서비스를 통해, 생활의 편리와 가치를 동시에 누릴 수 있습니다!
+							</p>
+								<!-- <h1>The share house to change your life,<br> Welcome to 'STAY HERE' <a href="/sharehouse">share house</a>.</h1>
 								<p>Living exists to provide a new experience for those looking for a fun and funny.<br>In addition to public space and the private space that reflects the various concepts to spend time alone, you can experience the 'joy together.</p>
-							</header>
+							</header> -->
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
