--- a/itaewon.html
+++ b/itaewon.html
@@ -41,11 +41,9 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-						<li><a href="/sharehouse">shareHouse</a></li>
+							<li><a href="/sharehouse">STAY HERE : )</a></li>
+							<li><a href="yu.html">Yeungnam University</a></li>
 							<li><a href="itaewon.html">Itaewon</a></li>
-							<li><a href="yu.html">yu.ac.kr</a></li>
-							<li><a href="knu.html">knu.ac.kr</a></li>
-							<!-- <li><a href="elements3.html">Elements</a></li> -->
 						</ul>
 					</nav>
 
@@ -53,10 +51,24 @@
 					<div id="main">
 						<div class="inner">
 							<h1>이태원 쉐어하우스</h1>
+							<font size="2">
+								<p>
+									성별 : 여성전용 <br>
+									구조 : 거실, 부엌, 방3, 화장실1, 발코니1<br>
+									주택유형 : 주택2층<br>
+									계약기간 : 6개월 이상 
+									기타 : 마당, 주차 1대가능
+								</p>
+								<p>
+									<b>ROOM1 (1인실) - 보증금 60 / 월세 35 - (입주완료, 입주가능일 : 2017-04-11)</b><br>
+									<b>ROOM2 (1인실) - 보증금 70 / 월세 33 - (입주완료, 입주가능일 : 2017-04-11)</b><br>
+									<b>ROOM3 (1인실) - 보증금 70 / 월세 32 - (입주완료, 입주가능일 : 2017-09-25)</b>
+								</p>
+							</font>
 							<span class="image main"><img src="images3/pic01.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
+							<!-- <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p> -->
 						</div>
 					</div>
 
