--- a/yu.html
+++ b/yu.html
@@ -41,11 +41,9 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-						<li><a href="/sharehouse">shareHouse</a></li>
+							<li><a href="/sharehouse">STAY HERE : )</a></li>
+							<li><a href="yu.html">Yeungnam University</a></li>
 							<li><a href="itaewon.html">Itaewon</a></li>
-							<li><a href="yu.html">yu.ac.kr</a></li>
-							<li><a href="knu.html">knu.ac.kr</a></li>
-							<!-- <li><a href="elements3.html">Elements</a></li> -->
 						</ul>
 					</nav>
 
@@ -53,13 +51,33 @@
 					<div id="main">
 						<div class="inner">
 							<h1>영남대 쉐어하우스</h1>
+							<font size="2">
+								<p>
+									이태원에 이어 두번째 쉐어하우스를 하게 되네요!<br>
+									아직 준비단계 이다 보니 미흡한 점이 많지만, 성공적인 오픈을 위해 오늘도 열심히 !<br>
+									2월 중순 입주 가능 하며, 가전 및 가구 배치 후 추가적으로 사진 업데이트 하겠습니다 :)<br>
+									여성전용 또한 준비중에 있으니, 많은 관심 부탁 드립니다! (사전예약해 주세요~)
+								</p>
+								<p>
+									성별 : 남성전용 <br>
+									구조 : 거실, 부엌, 방3, 화장실2, 발코니2<br>
+									주택유형 : 아파트<br>
+									계약기간 : 6개월 이상 
+									기타 : 지하주차장, 엘리베이터, 오븐기, 전자렌지, 커피포트, 커피머신 등
+								</p>
+								<p>
+									<b>ROOM1 (2인실) - 보증금 60 / 월세 28 - (입수신청 가능)</b><br>
+									<b>ROOM2 (1인실) - 보증금 70 / 월세 33 - (입수신청 가능)</b><br>
+									<b>ROOM3 (1인실) - 보증금 70 / 월세 32 - (입주대기, 입주가능일 : 2017-08-10)</b>
+								</p>
+							</font>
 							<span class="image main"><img src="images3/yu_full.jpg" alt="" /></span>
 							<span class="image main"><img src="images3/yu_g.jpg" alt="" /></span>
 							<span class="image main"><img src="images3/yu_room1.jpg" alt="" /></span>
 							<span class="image main"><img src="images3/yu_room23.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<!-- <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p> -->
+							<!-- <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p> -->
 						</div>
 					</div>
 
@@ -70,13 +88,13 @@
 								<h2>CONACT</h2>
 								<form method="post" action="#">
 									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="KaKao" value="Kakao : chadichake" readonly/>
+										<input type="text" name="name" id="name" placeholder="KaKao" value="kakao : chdichake" readonly/>
 									</div>
 									<div class="field half">
-										<input type="text" name="email" id="email" placeholder="Email" value="Email : bk.xxxxxxxxx@gmail.com" readonly/>
+										<input type="text" name="email" id="email" placeholder="Email" value="email : bk.xxxxxxxxx@gmail.com" readonly/>
 									</div>
 									<div class="field">
-										<input type="text" name="email" id="email" placeholder="Tel" value="010-5366-2182" readonly/>
+										<input type="text" name="email" id="email" placeholder="Tel" value="manager : 010.5366.2182" readonly/>
 									</div>
 								</form>
 							</section>
