--- a/generic5.html
+++ b/generic5.html
@@ -41,11 +41,9 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-						<li><a href="/sharehouse">shareHouse</a></li>
+							<li><a href="/sharehouse">STAY HERE : )</a></li>
+							<li><a href="yu.html">Yeungnam University</a></li>
 							<li><a href="itaewon.html">Itaewon</a></li>
-							<li><a href="yu.html">yu.ac.kr</a></li>
-							<li><a href="knu.html">knu.ac.kr</a></li>
-							<!-- <li><a href="elements3.html">Elements</a></li> -->
 						</ul>
 					</nav>
 
