--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 							<!-- Logo -->
 								<a href="/sharehouse" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">stay here _</span>
+									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">stay here : shareHouse</span>
 								</a>
 
 							<!-- Nav -->
@@ -36,11 +36,9 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="/sharehouse">shareHouse</a></li>
+							<li><a href="/sharehouse">STAY HERE : )</a></li>
+							<li><a href="yu.html">Yeungnam University</a></li>
 							<li><a href="itaewon.html">Itaewon</a></li>
-							<li><a href="yu.html">yu.ac.kr</a></li>
-							<li><a href="knu.html">knu.ac.kr</a></li>
-							<!-- <li><a href="elements3.html">itaewon House</a></li> -->
 						</ul>
 					</nav>
 
@@ -54,25 +52,15 @@
 								Through systematic house management and various life and community services,
 								You can enjoy convenience and value of life at the same time!
 							</p>
-							<p>
-								'STAY HERE' HOUSE의 문을 열고 들어온 순간부터, 특별한 문화와 가치를 경험할 수 있습니다. 그리고 혼자만의 시간을 보낼 수 있는 개인공간은 물론, 모두가 어울릴 수 있는 공용공간이 마련돼 있습니다.
-								체계적인 하우스 관리와 다양한 생활 서비스 및 커뮤니티 서비스를 통해, 생활의 편리와 가치를 동시에 누릴 수 있습니다!
+							<p><font size="2">
+								'STAY HERE' 쉐어하우스의 문을 열고 들어온 순간부터, 특별한 문화와 가치를 경험할 수 있습니다. 그리고 혼자만의 시간을 보낼 수 있는 개인공간은 물론, 모두가 어울릴 수 있는 공용공간이 마련돼 있습니다.
+								체계적인 하우스 관리와 다양한 생활 서비스 및 커뮤니티 서비스를 통해, 생활의 편리와 가치를 동시에 누릴 수 있습니다.
+								</font>
 							</p>
 								<!-- <h1>The share house to change your life,<br> Welcome to 'STAY HERE' <a href="/sharehouse">share house</a>.</h1>
 								<p>Living exists to provide a new experience for those looking for a fun and funny.<br>In addition to public space and the private space that reflects the various concepts to spend time alone, you can experience the 'joy together.</p>
 							</header> -->
 							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images3/pic01.jpg" alt="" height="300px" weight="300px"/>
-									</span>
-									<a href="itaewon.html">
-										<h2>이태원</h2>
-										<div class="content">
-											<p>It is your best choice.</p>
-										</div>
-									</a>
-								</article>
 								<article class="style3">
 									<span class="image">
 										<img src="images3/yu_full.jpg" alt="" height="300px" weight="300px"/>
@@ -84,12 +72,23 @@
 										</div>
 									</a>
 								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images3/pic01.jpg" alt="" height="300px" weight="300px"/>
+									</span>
+									<a href="itaewon.html">
+										<h2>이태원</h2>
+										<div class="content">
+											<p>It is your best choice.</p>
+										</div>
+									</a>
+								</article>
 								<article class="style2">
 									<span class="image">
 										<img src="images3/pic02.jpg" alt="" height="300px" weight="300px"/>
 									</span>
 									<a href="knu.html">
-										<h2>경북대</h2>
+										<h2>-</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
