--- a/generic4.html
+++ b/generic4.html
@@ -65,27 +65,27 @@
 								<h2>CONACT</h2>
 								<form method="post" action="#">
 									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="KaKao" value="Kakao : chadichake" readonly/>
+										<input type="text" name="name" id="name" placeholder="" value="kakao : chdichake" readonly/>
 									</div>
 									<div class="field half">
-										<input type="text" name="email" id="email" placeholder="Email" value="Email : bk.xxxxxxxxx@gmail.com" readonly/>
+										<input type="text" name="email" id="email" placeholder="Email" value="" readonly/>
 									</div>
 									<div class="field">
-										<input type="text" name="email" id="email" placeholder="Tel" value="010-5366-2182" readonly/>
+										<input type="text" name="email" id="email" placeholder="" value="TEL. 010 - 5366 - 2182" readonly/>
 									</div>
 								</form>
 							</section>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+									<li><a class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+									<li><a class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
