--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="/sharehouse">STAY HERE : )</a></li>
+							<li><a href="/sharehouse">STAY HERE : ) </a></li>
 							<li><a href="yu.html">Yeungnam University</a></li>
 							<li><a href="itaewon.html">Itaewon</a></li>
 						</ul>
@@ -46,15 +46,16 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-							<h1>Sharing value with various people,<br>Growing space 'STAY HERE' is Share House.</h1>
-							<p>From the moment you open the door of STAY HERE HOUSE, you can experience a special culture and value.
-								There is a private space where you can spend your time alone, as well as a public space where everyone can hang out.
+							<h1>'STAY HERE' Share House is not just a house to live in, but a youth culture space with a different value and different colors.</h1>
+							<p>There is a private space where you can spend your time alone, 
+								as well as a common space where everyone can hang out. 
 								Through systematic house management and various life and community services,
-								You can enjoy convenience and value of life at the same time!
+								You can enjoy convenience and value of life at the same time.
 							</p>
 							<p><font size="2">
-								'STAY HERE' 쉐어하우스의 문을 열고 들어온 순간부터, 특별한 문화와 가치를 경험할 수 있습니다. 그리고 혼자만의 시간을 보낼 수 있는 개인공간은 물론, 모두가 어울릴 수 있는 공용공간이 마련돼 있습니다.
-								체계적인 하우스 관리와 다양한 생활 서비스 및 커뮤니티 서비스를 통해, 생활의 편리와 가치를 동시에 누릴 수 있습니다.
+								'STAY HERE' 셰어하우스는 단순히 모여사는 집이 아닌, 남다른 가치를 가지고, 다양한 사람들과 함께 성장하는 '모두가 주인공인' 공간 입니다.<br>
+								혼자만의 시간을 보낼 수 있는 개인공간은 물론, 모두가 어울릴 수 있는 공용공간이 구성되어 있습니다. 
+								체계적인 하우스 관리와 다양한 생활 서비스 및 커뮤니티 서비스를 통해, 생활의 편리와 가치를 동시에 누릴 수 있습니다. 
 								</font>
 							</p>
 								<!-- <h1>The share house to change your life,<br> Welcome to 'STAY HERE' <a href="/sharehouse">share house</a>.</h1>
@@ -127,72 +128,6 @@
 										</div>
 									</a>
 								</article>
-								<!-- <article class="style2">
-									<span class="image">
-										<img src="images3/pic07.jpg" alt="" />
-									</span>
-									<a href="yu.html">
-										<h2>Ipsum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images3/pic08.jpg" alt="" />
-									</span>
-									<a href="yu.html">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images3/pic09.jpg" alt="" />
-									</span>
-									<a href="yu.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images3/pic10.jpg" alt="" />
-									</span>
-									<a href="yu.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images3/pic11.jpg" alt="" />
-									</span>
-									<a href="yu.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images3/pic12.jpg" alt="" />
-									</span>
-									<a href="yu.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article> -->
 							</section>
 						</div>
 					</div>
@@ -204,27 +139,27 @@
 								<h2>CONACT</h2>
 								<form method="post" action="#">
 									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="KaKao" value="Kakao : chadichake" readonly/>
+										<input type="text" name="name" id="name" placeholder="" value="kakao : chdichake" readonly/>
 									</div>
 									<div class="field half">
-										<input type="text" name="email" id="email" placeholder="Email" value="Email : bk.xxxxxxxxx@gmail.com" readonly/>
+										<input type="text" name="email" id="email" placeholder="Email" value="" readonly/>
 									</div>
 									<div class="field">
-										<input type="text" name="email" id="email" placeholder="Tel" value="010-5366-2182" readonly/>
+										<input type="text" name="email" id="email" placeholder="" value="TEL. 010 - 5366 - 2182" readonly/>
 									</div>
 								</form>
 							</section>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+									<li><a class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+									<li><a class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
