--- a/itaewon.html
+++ b/itaewon.html
@@ -50,20 +50,24 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>이태원 쉐어하우스</h1>
+							<h1>이태원 셰어하우스</h1>
 							<font size="2">
 								<p>
+									<b>
 									성별 : 여성전용 <br>
 									구조 : 거실, 부엌, 방3, 화장실1, 발코니1<br>
 									주택유형 : 주택2층<br>
-									계약기간 : 6개월 이상 
-									기타 : 마당, 주차 1대가능
+									계약기간 : 6개월 이상 <br>
+									관리비 : 1/N<br>
+									기타 : 마당있음
+									</b>
 								</p>
 								<p>
-									<b>ROOM1 (1인실) - 보증금 60 / 월세 35 - (입주완료, 입주가능일 : 2017-04-11)</b><br>
-									<b>ROOM2 (1인실) - 보증금 70 / 월세 33 - (입주완료, 입주가능일 : 2017-04-11)</b><br>
-									<b>ROOM3 (1인실) - 보증금 70 / 월세 32 - (입주완료, 입주가능일 : 2017-09-25)</b>
-								</p>
+									<font size="1" color="orange">(단위 : 만원, 보증금 / 월세)</font>	<br>
+									<b>ROOM1 (1인실) - ￦90 / ￦40 - (입주완료, 입주가능일 : 2017-06-02)</b><br>
+									<b>ROOM2 (1인실) - ￦80 / ￦38 - (입주완료, 입주가능일 : 2017-04-11)</b><br>
+									<b>ROOM3 (1인실) - ￦80 / ￦35 - (입주완료, 입주가능일 : 2017-09-25)</b>
+								</p>								
 							</font>
 							<span class="image main"><img src="images3/pic01.jpg" alt="" /></span>
 							<!-- <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
@@ -79,27 +83,27 @@
 								<h2>CONACT</h2>
 								<form method="post" action="#">
 									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="KaKao" value="Kakao : chadichake" readonly/>
+										<input type="text" name="name" id="name" placeholder="" value="kakao : chdichake" readonly/>
 									</div>
 									<div class="field half">
-										<input type="text" name="email" id="email" placeholder="Email" value="Email : bk.xxxxxxxxx@gmail.com" readonly/>
+										<input type="text" name="email" id="email" placeholder="Email" value="" readonly/>
 									</div>
 									<div class="field">
-										<input type="text" name="email" id="email" placeholder="Tel" value="010-5366-2182" readonly/>
+										<input type="text" name="email" id="email" placeholder="" value="TEL. 010 - 5366 - 2182" readonly/>
 									</div>
 								</form>
 							</section>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+									<li><a class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+									<li><a class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
