--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<section class="tiles">
 								<article class="style3">
 									<span class="image">
-										<img src="images3/yu_full.jpg" alt="" height="300px" weight="300px"/>
+										<img src="images3/yu_g.jpg" alt="" height="300px" weight="300px"/>
 									</span>
 									<a href="yu.html">
 										<h2>영남대</h2>
