--- a/itaewon.html
+++ b/itaewon.html
@@ -59,7 +59,7 @@
 									주택유형 : 주택2층<br>
 									계약기간 : 6개월 이상 <br>
 									관리비 : 1/N<br>
-									기타 : 마당있음
+									기타 : 냉장고, 세탁기, 에어컨, 침대, 책상, 커피포트기, 마당있음 등
 									</b>
 								</p>
 								<p>
