--- a/yu.html
+++ b/yu.html
@@ -53,10 +53,11 @@
 							<h1>영남대 셰어하우스</h1>
 							<font size="2">
 								<p>
-									이태원에 이어 두번째 영남대 셰어하우스를 준비하고 있습니다!<br>
-									아직 준비단계 이다 보니 미흡한 점이 많지만, 빠른 시일 내 끝내도록 하겠습니다.<br>
+									이태원에 이어 두번째 영남대 셰어하우스를 준비하고 있습니다. 영남대역에서 12분 거리!<br>
+									아직 준비단계 이다 보니 미흡한 점이 많지만, 빠른 시일 내 끝내야 겠네요 ㅎ<br>
+									(함께 공유하는 공간을 운동 및 공부 일을 할 수 있는 공간으로 구성)<br>
 									2월 중순 입주 가능 하며, 인테리어 및 가구 배치 후 추가적으로 사진 업데이트 하겠습니다 :)<br>
-									여성전용 또한 준비중에 있으며, 문의 사항은 카톡 및 전화 주시기 바랍니다!
+									여성전용 또한 준비중에 있으며, 문의 사항은 카톡 및 전화 주세요!
 								</p>
 								<p>
 									<b>
@@ -65,23 +66,20 @@
 									주택유형 : 아파트<br>
 									계약기간 : 6개월 이상 <br>
 									관리비 : 1/N<br>
-									기타 : 지하주차장, 엘리베이터, 오븐기, 전자렌지, 커피포트, 커피머신 등
+									옵션 및 지원 : 지하주차장, 엘리베이터, 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 커피포트, 커피머신, 세제, 휴지 등
+									개인지급 : 침대, 옷장, 책상, 의자 등
 									</b>
 								</p>
 								<p>
 									<font size="1" color="orange">(단위 : 만원, 보증금 / 월세)</font>	<br>
-									<b>ROOM1 (2인실) - ￦60 / ￦29 - (입수신청 가능)</b><br>
-									<b>ROOM2 (1인실) - ￦70 / ￦33 - (입수신청 가능)</b><br>
-									<b>ROOM3 (1인실) - ￦70 / ￦32 - (입주대기, 입주가능일 : 2017-08-10)</b>
+									<b>ROOM1 (2인실) - ￦60 / ￦29 - (입주신청 가능)</b><br>
+									<b>ROOM2 (1인실) - ￦70 / ￦33 - (입주신청 가능)</b><br>
+									<b>ROOM3 (1인실) - ￦70 / ￦32 - (입주완료, 입주가능일 : 2017-08-10)</b>
 								</p>
 							</font>
+							<span class="image main"><img src="images3/yu_map.jpg" alt="" /></span>
 							<span class="image main"><img src="images3/yu_full.jpg" alt="" /></span>
 							<span class="image main"><img src="images3/yu_g.jpg" alt="" /></span>
-							<!-- <span class="image main"><img src="images3/yu_room1.jpg" alt="" /></span>
-							<span class="image main"><img src="images3/yu_room23.jpg" alt="" /></span> -->
-							<!-- <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p> -->
-							<!-- <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p> -->
 						</div>
 					</div>
 
