--- a/yu.html
+++ b/yu.html
@@ -66,7 +66,7 @@
 									주택유형 : 아파트<br>
 									계약기간 : 6개월 이상 <br>
 									관리비 : 1/N<br>
-									옵션 및 지원 : 지하주차장, 엘리베이터, 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 커피포트, 커피머신, 세제, 휴지 등
+									옵션 및 지원 : 지하주차장, 엘리베이터, 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 커피포트, 커피머신, 세제, 휴지 등<br>
 									개인지급 : 침대, 옷장, 책상, 의자 등
 									</b>
 								</p>
