--- a/yu.html
+++ b/yu.html
@@ -53,10 +53,12 @@
 							<h1>영남대 셰어하우스</h1>
 							<font size="2">
 								<p>
-									이태원에 이어 두번째 영남대 셰어하우스를 준비하고 있습니다. 영남대역에서 12분 거리!<br>
-									아직 준비단계 이다 보니 미흡한 점이 많지만, 빠른 시일 내 끝내야 겠네요 ㅎ<br>
+									영화를 좋아하는 사람들을 위한 주거공간 입니다.<br>
+									영화관 같은 거실에서 하우스메이트들과 영화 한 편 보는 일상을 즐겨보세요.<br>
+									나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요.<br>
 									2월 중순 입주 가능 하며, 인테리어 및 가구 배치 후 추가적으로 사진 업데이트 하겠습니다 :)<br>
-									여성전용 또한 준비중에 있으며, 문의 사항은 카톡 및 전화 주세요!
+									<br>
+									셰어하우스 여성전용 또한 준비중에 있으니, 문의는 카톡 또는 전화주시면 됩니다!!
 								</p>
 								<p>
 									<b>
@@ -64,16 +66,18 @@
 									구 조 : 거실, 부엌, 방3, 화장실2, 발코니2<br>
 									주택유형 : 아파트<br>
 									계약기간 : 6개월 이상 <br>
-									관리비 : 1/N<br>
-									옵션 및 지원 : 지하주차장, 엘리베이터, 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 커피포트, 커피머신, 세제, 휴지 등<br>
-									개인지급 : 침대, 옷장, 책상, 의자 등
+									관리비(공과금): 1/N<br>
+									개인옵션 : 침대, 옷장, 책상, 의자 등<br>
+									제공시설 : 영화관, 지하주차장, 엘리베이터, 와이파이, 신발장, 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 식기세트. 취사도구, 커피포트 등
 									</b>
 								</p>
 								<p>
 									<font size="1" color="orange">(단위 : 만원, 보증금 / 월세)</font>	<br>
 									<b>ROOM1 (2인실) - ￦60 / ￦29 - (입주신청 가능)</b><br>
-									<b>ROOM2 (1인실) - ￦70 / ￦33 - (입주신청 가능)</b><br>
-									<b>ROOM3 (1인실) - ￦70 / ￦32 - (입주완료, 입주가능일 : 2017-08-10)</b>
+									<b style="text-decoration:line-through;">
+										ROOM2 (1인실) - ￦70 / ￦32 - (입주완료, 입주가능일 : 2017-08-13)
+									</b><br>
+									<b>ROOM3 (1인실) - ￦70 / ￦33 - (입주신청 가능)</b>
 								</p>
 							</font>
 							<span class="image main"><img src="images3/yu_map.jpg" alt="" /></span>
